--- a/css/uas.css
+++ b/css/uas.css
@@ -2,7 +2,7 @@
 	font-family: Arial, Helvetica, sans-serif;
 	border: 1px solid;
 	width: 200px;
-	margin: 20px auto;
+	margin: 20px;
 	border-radius: 4px;
 }
 
@@ -66,8 +66,11 @@
 	width: 148px;
 }
 
+.test {
+    margin: -4px 0 0 5px;
+}
+
 .test a{
-    margin: -4px 0 0 3px;
     color: black;
 }
 
